<resources>
    <string name="app_name">TuristickaAtrakcijaFINALNI</string>
    <string name="dialog_about_title">O Aplikaciji</string>
    <string name="dialog_about_message">Aplikacija o Turistickim Atrakcija, prikazuje detalje o pojedinacnoj Atrakciji, cenu, webadresu itd.</string>
    <string name="dialog_about_yes">U redu.</string>
    <string name="dialog_about_no">Cancel</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Closed</string>
    <string name="aplikacija_o_glumcima_u_ovoj_aplikaciji_mozete_videti_listu_glumaca_njihove_podatke_i_filmove_u_kojima_je_glumio_milose_samo_jedan_podsetnik_naravno_ako_je_aplikacija_dobra_za_plus_sto_ste_rekli_da_mozete_dati">Aplikacija o Turistickim Atrakcijama, u ovoj Aplikaciji mozete videti listu Atrakcija, cene ulaznica, websajt, i ostale podatke.</string>
    <string name="nije_dovoljno_dobro_p">OK ZATVORI DIJALOG</string>
    <string name="ovaj_dialog_ce_se_prikazati_samo_prvi_i_jedini_put_kada_je_aplikacija_instalirana_i_pokrenuta_osim_u_slucaju_reinstalacije">Ovaj Dijalog ce se prikazati samo PRVI i JEDINI put kada je aplikacija instalirana i pokrenuta osim u slucaju reinstalacije.</string>
    <string name="dodaj_atrakciju">Dodaj Atrakciju</string>
    <string name="naziv_atrakcije">Naziv Atrakcije</string>
    <string name="opis_atrakcije">Opis Atrakcije</string>
    <string name="adresa_atrakcije">Unesite pravu Adresu Atrakcije</string>
    <string name="broj_telefona_duzi_od_5">Broj Telefona: duzi od 5!</string>
    <string name="websajt_atrakcije_ex_www_google_com">WebSajt Atrakcije ex: www.google.com</string>
    <string name="radno_vreme_od">Radno Vreme OD</string>
    <string name="radno_vreme_do">Radno vreme DO</string>
    <string name="cena_ulaznice_atrakcije">Cena Ulaznice Atrakcije</string>
    <string name="otvori_galeriju_za_sliku">OTVORI GALERIJU ZA SLIKU</string>
    <string name="potvrdi">Potvrdi</string>
    <string name="odustani">Odustani</string>
    <string name="komentar_utisak">Komentar/Utisak</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="dodaj_komentar">Dodaj Komentar</string>
    <string name="lista_utisaka">Lista Utisaka:</string>
    <string name="unesite_komentar_utisak_koji_zelite">Unesite Komentar/Utisak koji zelite!</string>
</resources>
